--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -1,6 +1,7 @@
 % Typography.
 \newcommand{\ccode}[1]{{\small\texttt{#1}}}
 \newcommand{\emcode}[1]{{\small\bfseries\texttt{#1}}}
+\newcommand{\esldef}[1]{{\bfseries{#1}}}                    % Define/introduce a term (to be indexed)
 \newcommand{\prog}[1]{\small\texttt{#1}}
 \newcommand{\eslmod}[1]{{\smaller\bfseries\texttt{#1}}}
 \newcommand{\eslfunc}[1]{\hyperlink{man:#1}{{\small\texttt{#1}}}}
