--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -45,24 +45,16 @@
 
 
 \newpage
-\chapter{Core modules}
-
-\section{\eslmod{easel}: error handling and other fundamentals}
+\chapter{\eslmod{easel}: the foundation}
 \input{../easel}
-\subsection{Functions in the easel module}
+\section{Functions in the easel module}
 \input{autotext/easel_functions}
-
 \vspace*{\fill}
-\begin{quote}
-\emph{Only a complete outsider could ask your question. Are there
-control authorities? There are nothing but control authorities. Of
-course, their purpose is not to uncover errors in the ordinary meaning
-of the word, since errors do not occur and even when an error does in
-fact occur, as in your case, who can say conclusively that it is an
-error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
-\end{quote}     
+
 
 \newpage
+\chapter{Core modules}
+
 \section{\eslmod{esl\_alphabet}: digitized biosequences}
 \input{../esl_alphabet}
 \subsection{Functions in the alphabet module}
