--- a/easel.tex
+++ b/easel.tex
@@ -1,7 +1,7 @@
 The easel (esl) module implements a small set of functionality shared
 by all the modules: notably, the error-handling system.
 
-\subsection{Error handling}
+\section{Error handling}
 
 Easel is intended for use in applications ranging from quick \& dirty
 one-off command line applications to complex graphical user interfaces
@@ -78,7 +78,7 @@ engineering concept introduced by the Eiffel language
 [\url{www.eiffel.com}]. C does not inherently support DBC, but Easel
 partially emulates it using assertions.}
 
-\subsubsection{Error handling: application perspective}
+\subsection{Error handling: application perspective}
 
 Almost all Easel functions return an integer status code, where
 \ccode{eslOK} (0) indicates success and a nonzero code indicates a
@@ -99,10 +99,12 @@ valid pointer on success, and \ccode{NULL} on failure; these are
 functions that only fail by memory allocation failure. Destructor
 functions (\ccode{*\_Destroy()}) always return \ccode{void}, and must
 have no points of failure of their own, because destructors can be
-called when we're already handling an exception. Finally, there are
-some functions that simply return an answer, rather than a status
-code; these must be functions that have no failure points. Easel is
-not completely dogmatic.
+called when we're already handling an exception. Functions with names
+containing \ccode{Is}, such as \ccode{esl_abc_XIsValid()}, are tests
+that return \ccode{TRUE} or \ccode{FALSE}. Finally, there are some
+functions that simply return an answer, rather than a status code;
+these must be functions that have no failure points. Easel is not
+completely dogmatic.
 
 Documentation of individual Easel functions refers to exceptions that
 are handled by \eslfunc{esl\_error()} as \textbf{thrown}, and normal
@@ -159,7 +161,7 @@ upon failure, before percolating an exception code upwards:
 \end{cchunk}
 
 
-\subsubsection{Replacing the default error handler}
+\subsection{Replacing the default error handler}
 
 \eslfunc{esl\_error()} gets as arguments a status code, file and
 linenumber for where the error occurred, and a \cfunc{printf()}-style
@@ -222,7 +224,7 @@ message into a FIFO queue, where they will be waiting for a main
 application-specific error handler to access when your application
 gets its thrown exception code back from Easel.
 
-\subsubsection{Internal API for exception handling}
+\subsection{Internal API for exception handling}
 
 You only need to understand this section if you want to understand
 Easel's source code (or other code that uses Easel conventions, like
@@ -288,3 +290,48 @@ standard \eslfunc{malloc()} and \eslfunc{realloc()} calls in Easel's
 error-throwing convention.
 
 
+\vspace*{\fill}
+\begin{quote}
+\emph{Only a complete outsider could ask your question. Are there
+control authorities? There are nothing but control authorities. Of
+course, their purpose is not to uncover errors in the ordinary meaning
+of the word, since errors do not occur and even when an error does in
+fact occur, as in your case, who can say conclusively that it is an
+error?}\\ \hspace*{\fill} -- Franz Kafka, \emph{The Castle}
+\end{quote}     
+
+
+\section{Memory management}
+
+
+\section{Replacements for C library functions}
+
+
+\section{File management}
+
+
+\section{Internals}
+
+\subsection{Input maps}
+
+Manipulating the ASCII strings that represent biosequence data
+requires frequent massaging. An input file might have sequence data
+mixed up with numerical coordinates and punctuation for human
+readability. We might want to distinguish characters that represent
+residues (that should be input) from characters for coordinates and
+punctuation (that should be ignored) from characters that aren't
+supposed to be present at all (that should trigger an error or
+warning). Also, in representing a sequence string internally, we might
+want to map the symbols in an input string onto a smaller internal
+alphabet. For example, we might want to be case-insensitive (allow
+both T and t to represent thymine), or we might want to allow an input
+T to mean U in a program that deals with RNA sequence analysis, so
+that input files can either contain RNA or DNA sequence data.  Easel
+reuses a concept of an \esldef{input map} in routines involved in
+reading and representing input character sequences, for example in the
+\eslmod{alphabet}, \eslmod{sqio}, and \eslmod{msa} modules. An input
+map is a many-to-one mapping of the 128 7-bit ASCII symbol codes
+(0..127) onto new ASCII symbol codes.
+
+An input map is defined as an \ccode{unsigned char inmap[128]} or a
+\ccode{unsigned char *} allocated for 128 entries. 
